welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: illegal start of simple pattern
var : NbPas = 0
    ^Variables:4: error: '=' expected but ';' found.
while (estSurBiscuit && !porteBiscuit) {
^